# awesome-openclaw-skills

./: README.md  bulk-upload.ts  skills_metadata.json
skills/0x-swap/: README.md
skills/4claw/: HEARTBEAT.md  SKILL.md  skill.json
skills/4todo/: SKILL.md
skills/abm-outbound/: SKILL.md
skills/actual-budget/: SKILL.md
skills/adhd-body-doubling/: README.md  SKILL.md
skills/agent-browser-2/: SKILL.md
skills/agent-browser-3/: SKILL.md
skills/agent-browser-4/: SKILL.md
skills/agent-browser-5/: SKILL.md
skills/agent-chronicle/: README.md  SKILL.md  skill.json
skills/agent-church/: SKILL.md
skills/agent-directory/: SKILL.md
skills/agent-news/: README.md  SKILL.md  monitor.sh
skills/agent-tinman/: SKILL.md  requirements.txt  tinman_runner.py
skills/agent-wallet/: SKILL.md
skills/agentchan/: skill.md
skills/agentic-compass/: SKILL.md
skills/agentic-spicy-food/: SKILL.md
skills/agentwallet/: SKILL.md
skills/ai-code-review/: SKILL.md
skills/ai-pdf-builder/: README.md  SKILL.md
skills/aikek/: SKILL.md
skills/alchemy-pay/: README.md  SKILL.md
skills/aluvia-web-proxy/: SKILL.md  content.js  package-lock.json  package.json  search.js
skills/amygdala-memory/: README.md  SKILL.md  install.sh
skills/appdeploy/: SKILL.md
skills/asana-pat/: AGENTS.md  (+2 more)
skills/keep/: README.md  SKILL.md  initialize.md  pyproject.toml
skills/keep/docs/: AGENT-GUIDE.md  ARCHITECTURE.md  OPENCLAW-INTEGRATION.md  QUICKSTART.md  REFERENCE.md
skills/keep/keep/: __init__.py  api.py  chunking.py  cli.py  config.py  context.py  indexing.py  logging_config.py  paths.py  pending_summaries.py  store.py  types.py
skills/keep/keep/providers/: __init__.py  base.py  documents.py  embedding_cache.py  embeddings.py  llm.py  mlx.py  summarization.py
skills/keep/later/: api_full.py  relationships.py  tagging.py  test_relationships.py  test_tagging.py
skills/keep/openclaw-plugin/: index.ts  openclaw.plugin.json
skills/keep/patterns/: conversations.md  domains.md
skills/keep/tests/: test_cli.py  test_core.py  test_embedding_cache.py  test_extraction.py  test_extraction_e2e.py  test_integration.py  test_openclaw_integration.py  test_pending_summaries.py  test_summarizers.py
skills/keep/tests/data/: README.md  impermanence_verse.txt
(+943 files in other folders)
